--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
    
 
 <footer>
-    <span><p class = "mainFont">allright copyright 2021@</p></span>
+    <span><p class = "mainFont"></p></span>
      
     <span id="twitter">
         <a  href ="https://twitter.com/BasyOsh" target = "_blank" >
