--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     
 <header id="demo">This is a beta website</header>    
-<span id ="main_page">assetto corsa cars</span>
+<span id ="main_page">assetto corsa mods</span>
 
 <div id = "login_p">
     
@@ -141,6 +141,36 @@
             <img id = "cars_Image" src="carsImage/SONATA 2014.jpg" alt="">
             <span class = "mainFont">SONATA 2014</span>
             <a class = "mainFont" href="https://sharemods.com/fyxis5wouo3c/zxu_sonata_6ys.rar.html">download</a>
+        </div>
+    </div>
+
+    <div id = "ford_cars" class = "show">
+        <div class = "contaner">
+            <img id = "cars_Image" src="carsImage/ford raptor.jpg" alt="">
+            <span class = "mainFont">Ford SVT Raptor 2015 v0.9 :</span>
+            <a class = "mainFont" href="https://mega.nz/file/QV8VCA4K#YvGAdc85sCYyUvQFZbXgnpoIESpyF25hXGrZn4nAtJo">download</a>
+        </div>
+    </div> 
+
+    <div id = "GMC_cars" class = "show">
+        <div class = "contaner">
+            <img id = "cars_Image" src="carsImage/GMC Sierra 2012.jpg" alt="">
+            <span class = "mainFont">GMC Sierra 2012 V1.1 :</span>
+            <a class = "mainFont" href="https://mega.nz/file/hUFzyKaK#6n0FaN09z-PPPkrxmLlucyZ-ycUYZKjBWHzSJcRK3Tc">download</a>
+        </div>
+    </div>
+
+    <div id ="chevrolet_cars" class = "show">
+        <div class = "contaner">
+            <img id = "cars_Image" src="carsImage/chevrolet Impala SS.jpg" alt="">
+            <span class = "mainFont">chevrolet Impala SS 1996 :</span>
+            <a class = "mainFont" href="https://mega.nz/file/cB9EUIBK#rwdRa5Mzw23GQGS3Jx0OAuPbamTNg43o5AmJOXPjHyo">download</a>
+        </div>
+
+        <div class = "contaner">
+            <img id = "cars_Image" src="carsImage/caprice 13.jpg" alt="">
+            <span class = "mainFont">chevrolet Caprice13 By Betr :</span>
+            <a class = "mainFont" href="http://www.mediafire.com/file/isvnlf11g3o4phu/Caprice13_By_Betr.rar/file">download</a>
         </div>
     </div>
 
