--- a/index.html
+++ b/index.html
@@ -606,7 +606,13 @@
         <div class = "contaner">
             <img id="cars_Image" src="carsImage/akina 2017.png" alt="saudi streets">
             <span class = "mainFont">Mount Akina</span>
-          <a class = "mainFont" target = "_blank" href = "hhttps://drive.google.com/file/d/1wP6kmQZs0ZG22l7XIR0Qz6WxbCSSaGHo/view" target="_blank">download</a>
+          <a class = "mainFont" target = "_blank" href = "https://drive.google.com/file/d/1wP6kmQZs0ZG22l7XIR0Qz6WxbCSSaGHo/view" target="_blank">download</a>
+        </div>
+
+        <div class = "contaner">
+            <img id="cars_Image" src="carsImage/khafji.png" alt="khafji">
+            <span class = "mainFont">khafji_0.1</span>
+          <a class = "mainFont" target = "_blank" href = "https://www.mediafire.com/file/ijmjtt0f00yqg97/khafji_0.1.rar/file" target="_blank">download</a>
         </div>
 
     </div>
