--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
 <body>
   
     
-<header id="demo">This is a beta website</header> 
+ 
 <div class = "toppage">   
 <div id ="main_page">assetto corsa mods</div>
 
 <div id = "login_p">
     <input type="txet" placeholder="username">
     <input type="password" placeholder="password">
-    <input type="submit" placeholder="login">
+    <button >sign in</button>
 </div>
 
 </div>
-<hr>
+<h1></h1>
 
 
- <span class = "mainFont">you have to install custom shaders patch for the mods to work I recommend using </span>
+<span class = "mainFont">you have to install custom shaders patch for the mods to work I recommend using </span>
 
 <span>
     <a href="https://assettocorsa.club/content-manager.html" class = "mainFont">content manager.</a>
@@ -453,6 +453,12 @@
             <img id = "cars_Image" src="carsImage/ROLLS-ROYCE PHANTOM MANSORY.jpg" alt="">
             <span class = "mainFont" >ROLLS-ROYCE PHANTOM MANSORY :</span>
             <a class = "mainFont" target = "_blank" href="https://sharemods.com/2psmefgrjly4/ddm_subaru_22b_1.0.rar.html">download</a>
+        </div>
+
+        <div class = "contaner">
+            <img id = "cars_Image" src="carsImage/Nissan 180SX Type X.jpg" alt="">
+            <span class = "mainFont" >Nissan 180SX Type X :</span>
+            <a class = "mainFont" target = "_blank" href="https://youtu.be/sPabzoB_LUs?t=77">download</a>
         </div>
 
         
