--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
 </div>
 <h1></h1>
 
-
-<span class = "mainFont">you have to install custom shaders patch for the mods to work I recommend using </span>
-
+<div style="margin:20px;">
+<span class = "mainFont" >you have to install custom shaders patch for the mods to work I recommend using </span>
 <span>
-    <a href="https://assettocorsa.club/content-manager.html" class = "mainFont">content manager.</a>
+    <a href="https://assettocorsa.club/content-manager.html" class = "mainFont" >content manager.</a>
 </span>
+</div>
+
 <div class = "search">
     <input class ="search_text" type="text" placeholder = "search..">
     <button type = "submit"><img src="https://img.icons8.com/material-two-tone/50/000000/search-more.png"/></button>
