--- a/index.html
+++ b/index.html
@@ -339,6 +339,13 @@
             <span class = "mainFont">KSA Team Kabos By Moov PKG</span>
             <a class = "mainFont" target = "_blank" href="http://www.mediafire.com/file/0npyyuad729s45i/KSA_Team_Kabos_By_Moov_PKG.rar/file">download</a>
         </div>
+
+        <div class = "contaner">
+            <img id = "cars_Image" src="carsImage/cr_sonata.jpg" alt="">
+            <span class = "mainFont">cr_sonata</span>
+            <span class = "mainFont">Convert BY CRAZY :</span>
+            <a class = "mainFont" target = "_blank" href="https://www.mediafire.com/file/y2hf36f7q67jpdc/cr_sonata.rar/file">download</a>
+        </div>
     </div>
 
     <div id = "ford_cars" class = "show">
@@ -403,14 +410,24 @@
 
         <div class = "contaner">
             <img id = "cars_Image" src="carsImage/caprice 13.jpg" alt="">
-            <span class = "mainFont">chevrolet Caprice13 By Betr :</span>
+            <span class = "mainFont">Chevrolet Caprice13</span>
+            <p></p>
+
+            <span class = "mainFont"> Betr's :</span>
             <a class = "mainFont" target = "_blank" href="http://www.mediafire.com/file/isvnlf11g3o4phu/Caprice13_By_Betr.rar/file">download</a>
+            <p></p>
+            <span class = "mainFont"> @Seakayo's :</span>
+            <a class = "mainFont" target = "_blank" href="https://sharemods.com/862e3ocf0xtc/_iseakayo_caprice_2013.rar.html">download</a>
         </div>
 
         <div class = "contaner">
             <img id = "cars_Image" src="carsImage/cruze 2015.jpg" alt="">
             <span class = "mainFont">mtn_cruze:</span>
             <a class = "mainFont" target = "_blank" href="https://www.racedepartment.com/downloads/mtn-chevrolet-cruze-2015.23135/">download</a>
+            <p></p>
+            <span class = "mainFont">tn_cruze13:</span>
+            <p></p>
+            <a class = "mainFont" target = "_blank" href="https://drive.google.com/file/d/1GWvv1vgCT1gt13BssvsHPyg_wjvTOSpC/view?usp=sharing">download</a>
         </div>
 
         <div class = "contaner">
@@ -456,6 +473,11 @@
             <img id = "cars_Image" src="carsImage/optima 2011.jpg" alt="">
             <span class = "mainFont">c4_optima_11</span>
             <a class = "mainFont" target = "_blank" href="http://www.mediafire.com/file/9p8ax488t8jie1a/c4_optima_11.rar/file">download</a>
+            <p></p>
+            <span class = "mainFont">optima 11-13 @7zP</span>
+            <a class = "mainFont" target = "_blank" href="https://www.mediafire.com/file/sn4hydm0cqkeke9/7zp_optima_v2.rar/file">download</a>
+            <span class = "mainFont">so7</span>
+            <a class = "mainFont" target = "_blank" href="https://www.mediafire.com/file/ozlromug9osxsui/7zp_optima_sw7.rar/file">download</a>
         </div>
     </div>
     <div id ="nissan_cars" class = "show">
@@ -538,8 +560,12 @@
         <span class = "mainFont">DeeLoo camry 2004  :</span>
         <a class = "mainFont" target = "_blank" href = "https://www.mediafire.com/file/pj0f272ip65uyia/DeeLoo_-_camry2004.rar/file">download</a>
         <p></p>
-        <span class = "mainFont">c4 camry 2004 :</span>
-        <a class = "mainFont" target = "_blank" href = "https://top4top.io/process/f33758a685c333cdd758a4cbedb09404defe38b6">download</a>
+        <span class = "mainFont">SGHH CAMRY 2005 :</span>
+        <a class = "mainFont" target = "_blank" href = "https://www.mediafire.com/file/b2rz8e0fkorlkdk/sghh_camry_2005.rar/file">download Stock</a>
+        <p></p>
+        <a class = "mainFont" target = "_blank" href = "https://www.mediafire.com/file/gp3ifmfdctp1g9k/sghh_camry_so7_2005.rar/file">download so7</a>
+        <p></p>
+        <a class = "mainFont" target = "_blank" href = "https://www.mediafire.com/file/n63wjvqghv74n9y/تظليل+كتم+اسود+++كتم+نيكل.rar/file">Windows films</a>
         <p></p>
         <span class = "mainFont">CAMRY 2004 @eb3.a :</span>
         <a class = "mainFont" target = "_blank" href = "https://top4top.io/downloadf-13416x1e71-rar.html">download</a>
@@ -581,8 +607,12 @@
 
         <div class = "contaner">
             <img id="cars_Image" src = "carsImage/camry 2011.jpg" alt="">
-            <span class = "mainFont">Toyota Camry 2011 GL :</span>
-            <a class = "mainFont" target = "_blank" href = "https://www.youtube.com/watch?v=3AijqhcnkSE&t=450s">download</a>
+            <span class = "mainFont">Toyota Camry 2011 :</span>
+            <p></p>
+            <span class = "mainFont">BY M3e8L & ZXU:</span>
+            <a class = "mainFont" target = "_blank" href = "https://drive.google.com/file/d/14b4MKrLosf25Ei05gdK-Zq1JEhcYPye2/view?usp=sharing">download</a>
+            <span class = "mainFont">so7 :</span>
+            <a class = "mainFont" target = "_blank" href = "https://drive.google.com/file/d/1LNYuYMetMYt9skyte-PNn_f38DcWDF2w/view?usp=sharing">download</a>
         </div>
 
             <div class = "contaner">
@@ -594,7 +624,7 @@
             <div class = "contaner">
                 <img id="cars_Image" src = "carsImage/supra_88.jpg" alt="">
                 <span class = "mainFont">1988 TOYOTA SUPRA 3.0GT TURBO A :</span>
-                <a class = "mainFont" target = "_blank" href = "https://www.youtube.com/watch?v=MT1R3siLXM0&t=4s">download</a>
+                <a class = "mainFont" target = "_blank" href = "https://www.youtube.com/watch?v=MT1R3siLXM0&t=4s">video</a>
             </div>
 
             
@@ -657,6 +687,12 @@
             <img id="cars_Image" src="carsImage/khafji.png" alt="khafji">
             <span class = "mainFont">khafji_0.1</span>
           <a class = "mainFont" target = "_blank" href = "https://www.mediafire.com/file/y1eh9y7v9lffub8/khafji0.2.rar/file" target="_blank">download</a>
+        </div>
+
+        <div class = "contaner">
+            <img id="cars_Image" src="carsImage/Alfrusiy Street v0.8.png" alt="khafji">
+            <span class = "mainFont">Alfrusiy Street v0.8</span>
+          <a class = "mainFont" target = "_blank" href = "https://www.youtube.com/watch?v=y_wvMoqObi0" target="_blank">video</a>
         </div>
 
 
